@@ -35,7 +35,7 @@
 //  * The authentication provided by the client is always accepted as it is
 //    used as a channel to pass information rather than for authentication for
 //    pluggable transports.
-package socks5
+package socks5 // import "gitlab.com/yawning/obfs4.git/common/socks5"
 
 import (
 	"bufio"
